# ralph-desktop

./: README.md  package.json  pnpm-lock.yaml
docs/requirements/: 002-e2e-testing-requirements.md
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: auto_update.rs  lib.rs  main.rs  test_support.rs
src-tauri/src/adapters/: claude.rs  codex.rs  mod.rs
src-tauri/src/commands/: loop_commands.rs  mod.rs  project_commands.rs  recovery_commands.rs  update_commands.rs
src-tauri/src/engine/: ai_brainstorm.rs  brainstorm.rs  logs.rs  mod.rs
src-tauri/src/security/: mod.rs
src-tauri/src/storage/: mod.rs  models.rs
src/lib/components/: AiBrainstorm.svelte  BrainstormWizard.svelte  CliNotInstalled.svelte  GitRepoCheckDialog.svelte  LogViewer.svelte  NotificationToast.svelte  ProjectList.svelte  PromptEditor.svelte  QueueStatus.svelte  RecoveryDialog.svelte  SettingsPanel.svelte  ShortcutsHelp.svelte  TaskDetail.svelte
src/lib/services/: loopStart.ts  tauri.ts
src/lib/stores/: autoUpdate.ts  gitRepoCheck.ts  loop.ts  projects.ts  queue.ts  settings.ts
src/lib/types/: index.ts
src/routes/: +layout.svelte  +page.svelte
