[package]
name = "ralph-desktop"
version = "0.1.10"
description = "Ralph Desktop - Visual Ralph Loop Controller"
authors = ["刘小排"]
edition = "2021"

[lib]
name = "ralph_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
which = "7"
regex = "1"
dirs = "6"
thiserror = "2"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"] }
semver = "1"
sha2 = "0.10"
hex = "0.4"
futures-util = "0.3"

[dev-dependencies]
tempfile = "3"
